www/css/projects/projects.css
  md-fab-toolbar .md-fab-toolbar-wrapper {
    display: block;
    position: relative;
    overflow: hidden;
    height: 4.8rem !important; }

 .gridListdemoBasicUsage md-grid-list {
  margin: 8px; }
.gridListdemoBasicUsage .gray {
  background: #f5f5f5; }
.gridListdemoBasicUsage .green {
  background: #b9f6ca; }
.gridListdemoBasicUsage .yellow {
  background: #ffff8d; }
.gridListdemoBasicUsage .blue {
  background: #84ffff; }
.gridListdemoBasicUsage .purple {
  background: #b388ff; }
.gridListdemoBasicUsage .red {
  background: #ff8a80; }
.gridListdemoBasicUsage md-grid-tile {
  transition: all 400ms ease-out 50ms; }

.cardHeight {
  height :100% !important;
  margin-bottom: 10px;
  border-radius: 5px;
}

.cardHeader {
  border-radius: 5px 5px 0 0 !important;
}

